# libnostd

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: check_scripts.yml  main.yml  static.yml
examples/: CMakeLists.txt  example-01.cpp  example-02.cpp  example-03.cpp
include/libnostd/: libnostd.hpp
include/libnostd/core/: common.hpp
include/libnostd/cs/: core.hpp
include/libnostd/math/: core.hpp  statistics.hpp
scripts/: build.sh
src/: libnostd.cpp
src/core/: common.cpp
src/cs/: core.cpp
src/math/: core.cpp  statistics.cpp
tests/: CMakeLists.txt  test_cs.cpp  test_math.cpp
