cmake_minimum_required(VERSION 3.14)

project(tests)

set(CMAKE_CXX_STANDART 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

include_directories(../include)

enable_testing()

add_executable(tests test_cs.cpp test_math.cpp ../src/math/core.cpp ../src/cs/core.cpp ../src/math/statistics.cpp)
target_link_libraries(tests GTest::gtest_main)

include(GoogleTest)
gtest_discover_tests(tests)

add_custom_target(testsall ALL
  DEPENDS tests
  COMMAND tests
)
